--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -16,28 +16,6 @@ body {
   color: #333;
 }
 
-.button {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  cursor: pointer;
-  border-radius: 4px;
-  font-size: 16px;
-}
-
-.button:hover {
-  background-color: #0056b3;
-}
-
-.input, .select {
-  width: 100%;
-  padding: 10px;
-  margin: 5px 0;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
 .form-group {
   margin-bottom: 1.5rem;
 }
@@ -56,10 +34,12 @@ body {
 }
 
 button {
+  width: 140px;
+  height: 50px;
   margin-top: 1rem;
   padding: 1rem 2rem;
   border: none;
-  background-color: #c1c2c4;
+  background-color: #c1c2c4c6;
   color: white;
   border-radius: 0.5rem;
   cursor: pointer;
@@ -69,32 +49,53 @@ button:hover {
   background-color: #3181f9;
 }
 
-button[type="button"] {
-  background-color: #dc3545;
+button + button {
+  margin-left: 5px;
 }
 
-button[type="button"]:hover {
-  background-color: #c82333;
+button[type="delete"] {
+  background-color: #8e8d8d;
 }
 
-.close-btn {
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
-  background: none;
-  border: none;
+button[type="close"] {
+  position: fixed;
+  top: 10px;
+  right: 50px;
+  width: 30px;
+  height: 30px;
+  padding: 0;           
+  border-radius: 50%;
+  background-color: #f9f9f9;
+  border: none;         
   cursor: pointer;
-}
-
-.filter-section {
-  margin-top: 1rem;
-}
-
-.view-switcher {
-  margin-top: 1rem;
-  display: flex;
+  transition: background-color 0.3s;
+  display: flex;          
   justify-content: center;
-  gap: 1rem;
+  align-items: center;
+  color: #333;
+  font-size: 16px;
+}
+
+button[type="close"]:hover {
+  background-color: red;
+}
+
+button[type="submit"] {
+  background-color: #3181f9;
+}
+
+button[type="route"] {
+  background-color: white;
+  width: auto;
+  height: auto;
+  color: #3181f9;
+}
+
+button[type="route"]:hover {
+  background-color: #3181f9;
+  width: auto;
+  height: auto;
+  color: white;
 }
 
 .Map {
@@ -108,6 +109,8 @@ button[type="button"]:hover {
 
 .menu {
   position: absolute;
+  width: 400px;
+  height: auto;
   top: 10px;
   left: 10px;
   background: rgba(255, 255, 255, 0.8);
@@ -142,6 +145,18 @@ button[type="button"]:hover {
   opacity: 0;
   transform: scale(0.9);
   animation: popupShow 0.3s forwards;
+}
+
+.input, .select {
+  width: 100%;
+  padding: 10px;
+  margin: 5px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.filter-section {
+  margin-top: 1rem;
 }
 
 @keyframes popupShow {
