--- a/frontend/src/components/Map.css
+++ b/frontend/src/components/Map.css
@@ -107,13 +107,13 @@
 }
 
 .heart-filled::before {
-  content: "\2665"; /* Filled heart symbol */
-  color: red; /* Filled color */
+  content: "\2665";
+  color: red;
 }
 
 .heart-tooltip {
   position: absolute;
-  bottom: 35px; /* Position below the heart icon */
+  bottom: 35px;
   left: 50%;
   font-size: small;
   transform: translateX(-50%);
